@@ -286,10 +286,14 @@ turn_info::PROCESS_DATA_RESULT turn_info::process_network_data(const config& cfg
 		throw network::error("");
 	}
 
-	//The host has ended linger mode in a campaign -> enable the "End scenario" button
-	if (cfg.child("notify_next_scenario")){
+	// The host has ended linger mode in a campaign -> enable the "End scenario" button
+	// and tell we did get the notification.
+	if (cfg.child("notify_next_scenario")) {
 		gui::button* btn_end = gui_.find_button("button-endturn");
-		btn_end->enable(true);
+		if(btn_end) {
+			btn_end->enable(true);
+		}
+		return PROCESS_END_LINGER;
 	}
 
 	//If this client becomes the new host, notify the play_controller object about it
